# Discord-Twitch-Live-Notifier

./: .coveragerc  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
app/: discord_client.py  main.py  twitch_client.py
app/tests/: conftest.py  test_discord_client.py  test_main.py
