[tool.poetry]
name = "discord-twitch-live-notifier"
version = "0.1.0"
description = "Sends a notification through a Discord embed if a streamer goes live on Twitch."
authors = ["Deko <gadse.deko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
loguru = "^0.6.0"
pre-commit = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
