[tool.poetry]
name = "discord-twitch-live-notifier"
version = "0.1.0"
description = "Sends a notification through a Discord embed if a streamer goes live on Twitch."
authors = ["Deko <gadse.deko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.2"
pre-commit = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
